--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,8 @@
-{"package": "AnkiDeckVault","name": "Anki DeckVault","conflicts": [],"mod": 10000000000,"version": "1.0.0v","min_point_version": "2.1.36"}
+{
+    "package": "AnkiDeckVault",
+    "name": "Anki DeckVault",
+    "conflicts": [],
+    "mod": 10000000000,
+    "version": "1.0.0v",
+    "min_point_version": "2.1.36"
+}
