changed some wordings for increased clarity

--- a/addoncreatorfiles/config2.json
+++ b/addoncreatorfiles/config2.json
@@ -3,6 +3,6 @@
         "addopenlink": "False",
         "adddownloadto": "False",
         "addpwd_inp": "True",
-        "Decklinks Name": "Projekt Anki"
+        "DeckLinks name": "Projekt Anki"
     }
 ]
